--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale = 1" />
-<link rel="stylesheet" href="/mc-banner.css" />
-<link rel="stylesheet" href="/loading.css" />
+<link rel="stylesheet" href="mc-banner.css" />
+<link rel="stylesheet" href="loading.css" />
     <title>MC Status Banner</title>
 <style>
     body{
@@ -45,7 +45,7 @@ getMC.onreadystatechange = function() {
             var tmp = JSON.parse(getMC.responseText);
             if(tmp.online == false){
                 console.log(tmp);
-                document.getElementById('mc-banner').innerHTML = '<div class="mc-top"> <img src="https://bunnbunsandben.github.io/stuff/mc/server-icons/mc.stibarc.gq.png"> <span class="mc-sub-top"> <span class="mc-title">mc.stibarc.gq</span> <span class="mc-header" style="color:#AA0000;">Can\'t connect to server</span> </span> </div> <h4 id="playercount"> <div style="display:inline;margin: 0 5px 0 0;"> <span style="color:#AAAAAA;"></span> <span style="color:#555555;"></span> <span style="color:#AAAAAA;"></span> </div> <span class="couponcode"> <div class="ping-badge bad"> </div></span> </h4> <div style="margin:0 0 5px 0;"> <h4 style="margin:1rem 0">Players Online:</h4> <span id="playerlist">None</span> </div> <br /> <div id="refresh" class="mc-button" style="image-rendering: pixelated;" onclick="loadMCBanner()"> <span style="font-family: Minecraft, sans-serif;">Refresh</span> </div>'; 
+                document.getElementById('mc-banner').innerHTML = '<div class="mc-top"> <img src="server-icons/mc.stibarc.gq.png"> <span class="mc-sub-top"> <span class="mc-title">mc.stibarc.gq</span> <span class="mc-header" style="color:#AA0000;">Can\'t connect to server</span> </span> </div> <h4 id="playercount"> <div style="display:inline;margin: 0 5px 0 0;"> <span style="color:#AAAAAA;"></span> <span style="color:#555555;"></span> <span style="color:#AAAAAA;"></span> </div> <span class="couponcode"> <div class="ping-badge bad"> </div></span> </h4> <div style="margin:0 0 5px 0;"> <h4 style="margin:1rem 0">Players Online:</h4> <span id="playerlist">None</span> </div> <br /> <div id="refresh" class="mc-button" style="image-rendering: pixelated;" onclick="loadMCBanner()"> <span style="font-family: Minecraft, sans-serif;">Refresh</span> </div>'; 
             }else{
                 console.log(tmp);
                 document.getElementById('mc-banner').innerHTML = '<div class="mc-top"> <img src="'+tmp.icon+'"> <span class="mc-sub-top"> <span class="mc-title">'+tmp.hostname+'</span> <span class="mc-header">'+tmp.motd.html+'</span> </span> </div> <h4 id="playercount"> <div style="display:inline;margin: 0 5px 0 0;"> <span style="color:#AAAAAA;">'+tmp.players.online+'</span> <span style="color:#555555;">/</span> <span style="color:#AAAAAA;">'+tmp.players.max+'</span> </div> <span class="couponcode"> <div class="ping-badge great"> </div></span> </h4> <div style="margin:0 0 5px 0;"> <h4 style="margin:1rem 0">Players Online:</h4> <span id="playerlist">Loading...</span> </div> <br /> <div id="refresh" class="mc-button" style="image-rendering: pixelated;" onclick="loadMCBanner()"> <span style="font-family: Minecraft, sans-serif;">Refresh</span> </div>';
